--- a/retos_codewars.ipynb
+++ b/retos_codewars.ipynb
@@ -6,7 +6,7 @@
       "name": "retos_codewars.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP5pcheMNau+6gUdia/OH86",
+      "authorship_tag": "ABX9TyOmOdPrMxC0yydE8PXYEY5A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -431,7 +431,7 @@
       "metadata": {
         "id": "j8ZuDKILUyPn"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -451,7 +451,7 @@
       "metadata": {
         "id": "7qYhZdXFKDob"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -464,7 +464,7 @@
       "metadata": {
         "id": "4cPSE0O9Ni7b"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -477,7 +477,7 @@
       "metadata": {
         "id": "euGEN3Y3NpE1"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -490,7 +490,7 @@
       "metadata": {
         "id": "h1QzcTz8OWrb"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -502,7 +502,7 @@
       "metadata": {
         "id": "Zc1UvQKUQX_Y"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -516,7 +516,7 @@
       "metadata": {
         "id": "-wjnrPNJSuSX"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -528,7 +528,7 @@
       "metadata": {
         "id": "uG2l-OvSRVfr"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -541,7 +541,7 @@
       "metadata": {
         "id": "yiA8t_N4Ru8t"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -560,7 +560,7 @@
       "metadata": {
         "id": "ytLC0biNTepV"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -572,7 +572,7 @@
       "metadata": {
         "id": "lOqBxnUUVsrT"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -585,7 +585,7 @@
       "metadata": {
         "id": "ip6mdtteZStR"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -598,7 +598,7 @@
       "metadata": {
         "id": "ZApsCKLCaV3J"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -613,7 +613,7 @@
       "metadata": {
         "id": "HDL3goKjkFtV"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -626,7 +626,7 @@
       "metadata": {
         "id": "0NwsUx7JlDwo"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -642,7 +642,7 @@
         "id": "OuSzii7Blhas",
         "outputId": "2f9cfc3d-af61-424a-f68e-5abedc66ca0a"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -672,7 +672,7 @@
       "metadata": {
         "id": "HFjEk1oPpXfc"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -684,7 +684,7 @@
       "metadata": {
         "id": "tBA-ponvqs1Y"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -696,7 +696,7 @@
       "metadata": {
         "id": "bsjEgZ5CtDWw"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -720,133 +720,375 @@
       "metadata": {
         "id": "3gHHYpLNtWwh"
       },
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "x = [1,2,3,1,2,3,4,1,321,3,4,1,123,4,1,23,3]\n",
-        "x.count(1)\n",
-        "[i for i,c in enumerate(x) if x.count(c) > 2]"
+        "def delete_nth(order,max_e):\n",
+        "    # code here\n",
+        "    result = []\n",
+        "    for x in order:\n",
+        "        if result.count(x) < max_e:\n",
+        "            result.append(x)\n",
+        "    return result"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KGL5mPcS0Nys",
-        "outputId": "999465fe-fdcf-470e-b98c-d7b731838d25"
+        "id": "KGL5mPcS0Nys"
       },
-      "execution_count": 120,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[0, 2, 3, 5, 6, 7, 9, 10, 11, 13, 14, 16]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 120
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "new=[]\n",
-        "delete = []\n",
-        "for c,i in enumerate(x):\n",
-        "  if i not in new or new.count(i) == 1:\n",
-        "    new.append(i)\n",
-        "  elif new.count(i) >= 2:\n",
-        "    delete.append(c)"
-      ],
-      "metadata": {
-        "id": "QoIAj2WW2sUA"
-      },
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "new"
+        "def check(seq, elem):\n",
+        "    return elem in seq"
+      ],
+      "metadata": {
+        "id": "yARVPyDg99om"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def find_short(s):\n",
+        "    # your code here\n",
+        "    return min([len(x) for x in s.split(\" \")])"
+      ],
+      "metadata": {
+        "id": "l78mmgtoaEK1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def sum_array(arr):\n",
+        "    #your code here\n",
+        "    if arr == None:\n",
+        "        result = 0\n",
+        "    elif len(arr) < 2:\n",
+        "        result = 0        \n",
+        "    else:\n",
+        "        result = sum(arr) - min(arr) - max(arr)\n",
+        "        \n",
+        "    return result"
+      ],
+      "metadata": {
+        "id": "oaBGKQ8odFpC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def count_positives_sum_negatives(arr):\n",
+        "    c=0\n",
+        "    suma=0\n",
+        "    for x in arr:\n",
+        "        if x > 0:\n",
+        "            c+=1\n",
+        "        elif x <= 0:\n",
+        "            suma += x                  \n",
+        "    return [c,suma] if len(arr) != 0 else []"
+      ],
+      "metadata": {
+        "id": "mliLx9Jjjdye"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def find_uniq(arr):\n",
+        "    # your code here\n",
+        "    return [x for x in arr if arr.count(x) == 1][0]"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "IP_xoP0V4n8l",
-        "outputId": "5d78cd5c-f66e-460a-ab38-a37e062c7a07"
+        "id": "ZK3Smiabje3A",
+        "outputId": "45b83b24-4339-479d-a702-c877a1a81363"
       },
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[1, 2, 3, 1, 2, 3, 4, 321, 4, 123, 23]"
+              "-65"
             ]
           },
           "metadata": {},
-          "execution_count": 139
+          "execution_count": 34
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "delete"
+        "def find_uniq(arr):\n",
+        "    # your code here\n",
+        "    #return [x for x in arr if arr.count(x) == 1][0]  #Take too much time\n",
+        "    aca = []\n",
+        "    n= []\n",
+        "    for x in arr:\n",
+        "        if x not in aca:\n",
+        "            c = arr.count(x)\n",
+        "            aca.append(x)\n",
+        "            n.append([x,c])\n",
+        "    for x,c in n:\n",
+        "        if c == 1:\n",
+        "            solution = x\n",
+        "    return solution"
+      ],
+      "metadata": {
+        "id": "g-bts03tl355"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def odd_or_even(arr):\n",
+        "    return \"even\" if sum(arr) % 2 == 0 else \"odd\""
+      ],
+      "metadata": {
+        "id": "1U7kb_Eml45P"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def hero(bullets, dragons):\n",
+        "    try:\n",
+        "        solution = bullets / dragons >= 2\n",
+        "    except ZeroDivisionError:\n",
+        "        return True\n",
+        "    return solution"
+      ],
+      "metadata": {
+        "id": "8L0QGAEJqlTZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def bouncing_ball(h, bounce, window):\n",
+        "    # your code\n",
+        "    c= 0\n",
+        "\n",
+        "    if h > 0 and bounce > 0 and bounce < 1 and window < h:\n",
+        "        #valor = h / bounce\n",
+        "        while h > window:\n",
+        "            c+=2\n",
+        "            h *= bounce\n",
+        "            \n",
+        "    else:\n",
+        "        return -1\n",
+        "    return c-1"
+      ],
+      "metadata": {
+        "id": "gLzfUcnIG-7t"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def xo(s):\n",
+        "    return s.lower().count('x') == s.lower().count('o')"
+      ],
+      "metadata": {
+        "id": "dJN8g2GYHUXn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def number(bus_stops):\n",
+        "    # Good Luck!\n",
+        "    suben=0\n",
+        "    bajan=0\n",
+        "    result = [x for i in bus_stops for x in i]\n",
+        "    for x,i in enumerate(result):\n",
+        "        if x%2== 0:\n",
+        "            suben +=i\n",
+        "        else:\n",
+        "            bajan +=i\n",
+        "    return suben-bajan"
+      ],
+      "metadata": {
+        "id": "2lsJGuPaIT8f"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def litres(time):\n",
+        "    return time//2"
+      ],
+      "metadata": {
+        "id": "7Q_xuCtdKsWo"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def square_sum(numbers):\n",
+        "    #your code here\n",
+        "    return sum(x**2 for x in numbers)"
+      ],
+      "metadata": {
+        "id": "VPtspiVBKuu5"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def sum_two_smallest_numbers(numbers):\n",
+        "    #your code here\n",
+        "    return sum(sorted([x for x in numbers if x>0])[0:2])"
+      ],
+      "metadata": {
+        "id": "ULKBoef2XRVC"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def printer_error(s):\n",
+        "    # your code\n",
+        "    bad =\"nopqrstuvwxyz\"\n",
+        "    no = sum([1 for x in s.lower() if x in bad])\n",
+        "    return \"{}/{}\".format(no,len(s))"
+      ],
+      "metadata": {
+        "id": "rEucbcJIYLNk"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def zero_fuel(distance_to_pump, mpg, fuel_left):\n",
+        "    #Happy Coding! ;)\n",
+        "    return distance_to_pump <= mpg*fuel_left"
+      ],
+      "metadata": {
+        "id": "pudmQsAKYM-d"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def validate_pin(pin):\n",
+        "    #return true or false\n",
+        "    return (len(pin) == 4 or len(pin) == 6) and pin.isdigit()"
+      ],
+      "metadata": {
+        "id": "-cLRVwF8e73E"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def find_next_square(sq):\n",
+        "    # Return the next square if sq is a square, -1 otherwise\n",
+        "    import math\n",
+        "    return (((sq)**(1/2)) + 1)**2 if math.sqrt(sq).is_integer() else -1"
+      ],
+      "metadata": {
+        "id": "2V-YJL5rhseJ"
+      },
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "G3sxUuX0h5l2"
+      },
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "uWi-FhvGjZIP"
+      },
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "iRCVRrSpkLP8"
+      },
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pow(sq,0.5)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "yzDeDKSR6gQJ",
-        "outputId": "0ec69efa-ed36-4f98-fe6f-2451c205190c"
+        "id": "xkCJlMOAkNg2",
+        "outputId": "45bd110e-504a-49d2-b936-b005612dd645"
       },
-      "execution_count": 140,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[7, 9, 11, 13, 14, 16]"
+              "11.0"
             ]
           },
           "metadata": {},
-          "execution_count": 140
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "for i in delete:\n",
-        "  new_x = x - x[delete[i]]\n",
-        "new_x"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 202
-        },
-        "id": "jCmhGNXy61ZB",
-        "outputId": "424ef50f-2b00-4fbb-87b3-6b7ea4ff5448"
-      },
-      "execution_count": 146,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "IndexError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-146-5b23cc03ca57>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdelete\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m   \u001b[0mnew_x\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdelete\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mnew_x\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-          ]
+          "execution_count": 34
         }
       ]
     },
@@ -856,7 +1098,7 @@
         ""
       ],
       "metadata": {
-        "id": "yARVPyDg99om"
+        "id": "iTSCYVTUkSqh"
       },
       "execution_count": null,
       "outputs": []
