--- a/retos_codewars.ipynb
+++ b/retos_codewars.ipynb
@@ -6,7 +6,7 @@
       "name": "retos_codewars.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOmOdPrMxC0yydE8PXYEY5A",
+      "authorship_tag": "ABX9TyM75Sxy0mTt7mCLmLUNP/wm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -937,7 +937,7 @@
       "metadata": {
         "id": "2lsJGuPaIT8f"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -949,7 +949,7 @@
       "metadata": {
         "id": "7Q_xuCtdKsWo"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -962,7 +962,7 @@
       "metadata": {
         "id": "VPtspiVBKuu5"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -975,7 +975,7 @@
       "metadata": {
         "id": "ULKBoef2XRVC"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -990,7 +990,7 @@
       "metadata": {
         "id": "rEucbcJIYLNk"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1003,7 +1003,7 @@
       "metadata": {
         "id": "pudmQsAKYM-d"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1016,7 +1016,7 @@
       "metadata": {
         "id": "-cLRVwF8e73E"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1030,29 +1030,157 @@
       "metadata": {
         "id": "2V-YJL5rhseJ"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def get_middle(s):\n",
+        "    #your code here\n",
+        "    mid = int(len(s)/2)\n",
+        "    if len(s)%2 == 0:\n",
+        "        result = s[mid-1]+ s[mid]\n",
+        "    else:\n",
+        "        result = s[mid]\n",
+        "    return result"
       ],
       "metadata": {
         "id": "G3sxUuX0h5l2"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def alphabet_position(text):\n",
+        "    abecedario = [x for x in \"abcdefghijklmnopqrstuvwxyz\"]\n",
+        "    numeros = [x for x in range(1,len(abecedario))]\n",
+        "    dictionary = {}\n",
+        "    for x in range(1,27):\n",
+        "        dictionary[abecedario[x-1]] = x\n",
+        "    \n",
+        "    tokenks = [x for x in text.lower() if x in abecedario]\n",
+        "        \n",
+        "    return \" \".join([str(dictionary[x]) for x in tokenks])"
       ],
       "metadata": {
         "id": "uWi-FhvGjZIP"
       },
-      "execution_count": 43,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def accum(s):\n",
+        "    # your code\n",
+        "    return \"-\".join(x.capitalize() for x in [x*(i+1) for i,x in enumerate(s)])"
+      ],
+      "metadata": {
+        "id": "PA7uLib-r30K"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def simple_multiplication(number) :\n",
+        "    # Your code goes here\n",
+        "    return number * 8 if number%2 == 0 else number*9"
+      ],
+      "metadata": {
+        "id": "0I5v4QTq_UMC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def rot13(message):\n",
+        "    #alphab\n",
+        "    abecedario = [x for x in \"abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ\"]\n",
+        "    numeros = [x for x in range(1,len(abecedario))]\n",
+        "    \n",
+        "    #coding dict\n",
+        "    abc1= {}\n",
+        "    abc2 ={}\n",
+        "    for x in range(1,53):\n",
+        "        if x < 27:\n",
+        "            abc1[abecedario[x-1]] = x\n",
+        "        else:\n",
+        "            abc2[abecedario[x-1]] = x\n",
+        "    \n",
+        "    #decoding dict     \n",
+        "    cba={}    \n",
+        "    for x,i in enumerate(abecedario):\n",
+        "        cba[x+1] = i\n",
+        "    \n",
+        "    encoding = []\n",
+        "\n",
+        "    for i in [x for x in message]:\n",
+        "        if i.isalpha():\n",
+        "            if i.isupper():\n",
+        "                encoding.append(abc2[i])\n",
+        "            else:\n",
+        "                encoding.append(abc1[i])\n",
+        "        else:\n",
+        "            encoding.append(i)\n",
+        "    \n",
+        "    new_value = []\n",
+        "    for x in encoding:\n",
+        "        if type(x) == int:\n",
+        "            if x <= 26:\n",
+        "                if x+13 > 26:\n",
+        "                    new_value.append(x+13 - 26)\n",
+        "                else:\n",
+        "                    new_value.append(x+13)\n",
+        "            elif x >= 27:\n",
+        "                if x+13 > 52:\n",
+        "                    new_value.append(x+13 - 26)\n",
+        "                else:\n",
+        "                    new_value.append(x+13)\n",
+        "                    \n",
+        "        elif x == \" \":\n",
+        "            new_value.append(\" \")\n",
+        "        else:\n",
+        "            new_value.append(x)\n",
+        "        \n",
+        "    return \"\".join([str(cba[x]) if x in cba else x for x in new_value])"
+      ],
+      "metadata": {
+        "id": "8TW81kHjLLCV"
+      },
+      "execution_count": 54,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def past(h, m, s):\n",
+        "    # Good Luck!\n",
+        "    return h*3600000 + m*60000 + s*1000"
+      ],
+      "metadata": {
+        "id": "ObPAuuu7jXKv"
+      },
+      "execution_count": 98,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def string_to_array(s):\n",
+        "    # your code here\n",
+        "    return s.split() if len(s) > 1 else ['']"
+      ],
+      "metadata": {
+        "id": "ag1GWz8tsrNa"
+      },
+      "execution_count": 99,
       "outputs": []
     },
     {
@@ -1061,44 +1189,7 @@
         ""
       ],
       "metadata": {
-        "id": "iRCVRrSpkLP8"
-      },
-      "execution_count": 43,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "pow(sq,0.5)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "xkCJlMOAkNg2",
-        "outputId": "45bd110e-504a-49d2-b936-b005612dd645"
-      },
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "11.0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 34
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "iTSCYVTUkSqh"
+        "id": "81THNwkYs8ja"
       },
       "execution_count": null,
       "outputs": []
