--- a/retos_codewars.ipynb
+++ b/retos_codewars.ipynb
@@ -6,7 +6,7 @@
       "name": "retos_codewars.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM75Sxy0mTt7mCLmLUNP/wm",
+      "authorship_tag": "ABX9TyPe/0Ute693cs+dU2L8nH2T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1154,7 +1154,7 @@
       "metadata": {
         "id": "8TW81kHjLLCV"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1167,7 +1167,7 @@
       "metadata": {
         "id": "ObPAuuu7jXKv"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1180,8 +1180,464 @@
       "metadata": {
         "id": "ag1GWz8tsrNa"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def maps(a):\n",
+        "    return [x+x for x in a]"
+      ],
+      "metadata": {
+        "id": "81THNwkYs8ja"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def double_integer(i):\n",
+        "    # Double the integer and return it!\n",
+        "    return 2*i"
+      ],
+      "metadata": {
+        "id": "hRg7gHMRtTZL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def bmi(weight, height):\n",
+        "    #your code here\n",
+        "    indice = weight/(height**2)\n",
+        "    if indice <= 18.5:\n",
+        "        p = \"Underweight\"\n",
+        "    elif indice <= 25.0:\n",
+        "        p = \"Normal\"\n",
+        "    elif indice <= 30.0:\n",
+        "        p= \"Overweight\"\n",
+        "    elif indice > 30.0:\n",
+        "        p =\"Obese\"\n",
+        "    return p"
+      ],
+      "metadata": {
+        "id": "DfXODBadtbZI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def abbrev_name(name):\n",
+        "    return \".\".join([x[0].upper() for x in name.split(\" \")])"
+      ],
+      "metadata": {
+        "id": "5nDH9weZuTbP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def is_divide_by(number, a, b):\n",
+        "    return number % a == 0 and number % b ==0 # good luck"
+      ],
+      "metadata": {
+        "id": "altAmREvytVp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def reverse_words(text):\n",
+        "  #go for it\n",
+        "    return \" \".join(x[::-1] for x in text.split(\" \"))"
+      ],
+      "metadata": {
+        "id": "05OM-taczzYX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def smash(words):\n",
+        "    return \" \".join(words)"
+      ],
+      "metadata": {
+        "id": "snLoh_670O1U"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def sum_array(a):\n",
+        "    return sum(a)"
+      ],
+      "metadata": {
+        "id": "QiPv_w5m0Pws"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def better_than_average(class_points, your_points):\n",
+        "    # Your code here\n",
+        "    return sum(class_points)/len(class_points) < your_points"
+      ],
+      "metadata": {
+        "id": "XW6P4rIR1IZE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def greet(name, owner):\n",
+        "    # Add code here\n",
+        "    return \"Hello boss\" if name == owner else \"Hello guest\""
+      ],
+      "metadata": {
+        "id": "_tGQKhW81hrv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def solution(string):\n",
+        "    return string[::-1]"
+      ],
+      "metadata": {
+        "id": "ACGdCgCA10cR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def disemvowel(string_):\n",
+        "    result =\"\"\n",
+        "    for x in string_:\n",
+        "        if x not in \"aeiouAEIOU\":\n",
+        "                result+= x\n",
+        "                \n",
+        "        elif x == \" \":\n",
+        "            result+= \" \"\n",
+        "                \n",
+        "    return result"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kbf-usEE18dz",
+        "outputId": "c7d31e8b-d672-4ee9-a4e2-bc48ba94859d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 119
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def sum_mix(arr):\n",
+        "    #your code here\n",
+        "    return sum([int(x) for x in arr])"
+      ],
+      "metadata": {
+        "id": "3wJfzF7A3Vm6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def count_sheep(n):\n",
+        "    # your code\n",
+        "    result = \"\"\n",
+        "    for x in range(1,n+1):\n",
+        "        result+= \"{} sheep...\".format(x)\n",
+        "    return result"
+      ],
+      "metadata": {
+        "id": "twzVJiHT3chc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def order(sentence):\n",
+        "    # code here\n",
+        "    ordenado = {}\n",
+        "    for x in sentence.split(\" \"):\n",
+        "        for i in x:\n",
+        "            if i.isdigit():\n",
+        "                ordenado[i] = x\n",
+        "                \n",
+        "    melo = dict(sorted(ordenado.items()))\n",
+        "    \n",
+        "    return \" \".join(melo.values())"
+      ],
+      "metadata": {
+        "id": "chaYrIQP4ql_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "1+3+5+7+9+11+13+15+17+19+21+23+25+27+29"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VPBYdChYJvFE",
+        "outputId": "378a52ba-c6c7-487b-ab12-e72da6601592"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "225"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def set_alarm(employed, vacation):\n",
+        "    # Your code here\n",
+        "    return True if employed == True and vacation == False else False"
+      ],
+      "metadata": {
+        "id": "-2dlckwgNui3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def stray(arr):\n",
+        "    return [x for x in arr if arr.count(x) ==1][0]"
+      ],
+      "metadata": {
+        "id": "5TfWJqI4O1R9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def find_it(seq):\n",
+        "    return [x for x in seq if seq.count(x)%2 != 0][0]"
+      ],
+      "metadata": {
+        "id": "JTHPUDIyPG_B"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def points(games):\n",
+        "    result = []\n",
+        "    for x in games:\n",
+        "        if x[0] > x[2]:\n",
+        "            result.append(3)\n",
+        "        elif x[0] == x[2]:\n",
+        "            result.append(1)\n",
+        "        else:\n",
+        "            result.append(0)\n",
+        "    return sum(result)"
+      ],
+      "metadata": {
+        "id": "q9uhQ7f7PTRU"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def two_sum(numbers, target):\n",
+        "    for x in numbers:\n",
+        "        comp = target - x\n",
+        "        if comp in numbers:\n",
+        "            result = numbers.index(comp)\n",
+        "            break\n",
+        "            \n",
+        "    return [numbers.index(x), result] if numbers.index(comp) != numbers.index(x) else [numbers.index(x),numbers.index(x)+1]"
+      ],
+      "metadata": {
+        "id": "VhaB2lc-Po_V"
+      },
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def positive_sum(arr):\n",
+        "    # Your code here\n",
+        "    return sum([x for x in arr if x > 0])"
+      ],
+      "metadata": {
+        "id": "btJEDVmPQdWl"
+      },
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def correct(string):\n",
+        "    return string.translate(str.maketrans(\"501\", \"SOI\")) #Copiado de codewars"
+      ],
+      "metadata": {
+        "id": "EdM879FRWso0"
+      },
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def correct(s):\n",
+        "    \n",
+        "    return s.replace(\"0\",'O').replace(\"1\",'I').replace(\"5\",'S')"
+      ],
+      "metadata": {
+        "id": "IbcFyBhwfnqP"
+      },
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def remove_exclamation_marks(s):\n",
+        "    #your code here\n",
+        "    return \"\".join([x for x in s if x != \"!\"])"
+      ],
+      "metadata": {
+        "id": "hARHckoiZfYo"
+      },
+      "execution_count": 60,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s=\"Hello World!\"\n",
+        "s.translate(str.maketrans(\"!,.\",))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 185
+        },
+        "id": "owVp51gXaFVY",
+        "outputId": "e94a2095-218a-4629-9633-a21b3fffbd0d"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-59-8322f3788f82>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"Hello World!\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranslate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmaketrans\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"!,.\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: maketrans() argument 2 must be str, not None"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = []\n",
+        "for x in games:\n",
+        "  if x[0] > x[2]:\n",
+        "    result.append(3)\n",
+        "  elif x[0] == x[2]:\n",
+        "    result.append(1)\n",
+        "  else:\n",
+        "    result.append(0)"
+      ],
+      "metadata": {
+        "id": "fz57DCz6S5sL"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f_ORBZADT0IE",
+        "outputId": "bf62e9c0-f409-469a-c6cd-f3e454e72c2c"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "30"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1189,7 +1645,7 @@
         ""
       ],
       "metadata": {
-        "id": "81THNwkYs8ja"
+        "id": "SXGn9LFAT04r"
       },
       "execution_count": null,
       "outputs": []
